# SIP_ENGINE

Capture/: CMakeLists.txt  CMakeUserPresets.json  PacketSniffer.cpp  SIPPacketQueue.h  conanfile.py  packetSnifferLive.cpp  parserSubscriber.cpp  utils.h
Capture/include/: utils.h
Capture/src/: PacketSniffer.cpp  packetSnifferLive.cpp  parserSubscriber.cpp
FORMAT/: ack.json  bye-200ok.json  callSession.txt  invite-200ok.json  parser.json
